--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
         <div class="col-12">
             <div id="postContainer" class="card-columns">
                 {% for post in posts %}
-                <!-- <div class="card border-0 rounded-0">
+                <div class="card border-0 rounded-0">
                     <div class="card-body bg-primary">
                         <h1 class="font-weight-bold m-0">{{ post.title }}</h1>
                         <hr class="my-2">
@@ -54,7 +54,7 @@
                         <hr class="my-2">
                         <p class="font-italic m-0"><small>{{ post.date.strftime('%B %d, %Y | %I:%M %p') }}</small></p>
                     </div>
-                </div> -->
+                </div>
                 {% endfor %}
             </div>
          </div>
