--- a/templates/index.html
+++ b/templates/index.html
@@ -51,8 +51,8 @@
                         <h1 class="font-weight-bold m-0">{{ post.title }}</h1>
                         <hr class="my-2">
                         <h4 class="text-justify">{{ post.body }}</h4>
-                        <hr class="my-2">
-                        <p class="font-italic m-0"><small>{{ post.date.strftime('%B %d, %Y | %I:%M %p') }}</small></p>
+                        <!-- <hr class="my-2">
+                        <p class="font-italic m-0"><small>{{ post.date.strftime('%B %d, %Y | %I:%M %p') }}</small></p> -->
                     </div>
                 </div>
                 {% endfor %}
