--- a/templates/base.html
+++ b/templates/base.html
@@ -12,26 +12,7 @@
 
     <title>Post IO &bull; {% block title %}{% endblock %}</title>
 </head>
-<body class="bg-white">
-    {% block nav %}
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
-        <a class="navbar-brand" href="/">Post IO</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <!-- <div class="navbar-nav mr-auto">
-                <a class="nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Features</a>
-            </div> -->
-            <div class="navbar-nav ml-auto">
-                <a class="nav-item nav-link" href="#"><i class="fa fa-user-plus"></i> Sign up</a>
-                <a class="nav-item nav-link" href="#"><i class="fa fa-sign-in-alt"></i> Log in</a>
-            </div>
-        </div>
-    </nav>
-    {% endblock %}
-
+<body class="bg-white text-black">
     {% block content %}
     {% endblock %}
 
