--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
 <div class="container py-3">
     <div class="row">
         <div class="col-12">
-            <h1 class="display-4 text-center">Welcome to Post IO</h1>
+            <h1 class="display-4 text-center font-weight-bold"><i class="far fa-sticky-note" onclick="toggle_theme()"></i> &empty;</h1>
         </div>
 
         <div class="col-12 col-md-6 offset-md-3 text-center py-3">
@@ -44,7 +44,7 @@
         </div>
 
         <div class="col-12">
-            <div id="postContainer" class="card-columns">
+            <div id="postContainer" class="card-columns text-white">
                 {% for post in posts %}
                 <div class="card border-0 rounded-0">
                     <div class="card-body bg-primary">
